# Basic-CMake-opengl-project

./: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/glad/: gl.h
dependencies/glfw/: CMakeLists.txt
dependencies/glm/: CMakeLists.txt
source/: main.cpp
source/graphics/: window.cpp  window.hpp
